force-app/main/default/objects/geopointe__GP_Schedule_Exception__c/geopointe__GP_Schedule_Exception__c.object-meta.xml
<CustomObject>
    <label>Geopointe Schedule Exception</label>
    <nameField>
        <label>Geopointe Schedule Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Schedule Exceptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>