force-app/main/default/objects/geopointe__GP_Schedule_Exception__c/fields/geopointe__Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>