force-app/main/default/objects/geopointe__GP_Schedule_Exception__c/fields/geopointe__End_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__End_Location_Name__c</fullName>
    <label>End Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>