force-app/main/default/objects/geopointe__GP_Schedule_Exception__c/fields/geopointe__End_Time__c.field-meta.xml
<CustomField>
    <fullName>geopointe__End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>