force-app/main/default/objects/geopointe__GP_Schedule_Exception__c/fields/geopointe__RoutePlanner_Id__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RoutePlanner_Id__c</fullName>
    <label>RoutePlanner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>